--- a/styles.css
+++ b/styles.css
@@ -2,80 +2,73 @@
     margin: 0;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+    box-sizing: border-box
 }
 
 .logo {
-
 }
 
 header {
     background-color: rgb(26, 26, 26);
-    padding: 50px;
+    padding: 50px
 }
 
 footer {
     background-color: rgb(0, 119, 255);
-    padding: 100px;
+    padding: 100px
 }
 
 .section1 {
     background-color: rgb(43, 43, 43);
-    padding: 100px;
+    padding: 100px
 }
 
 .searchsection {
     background-color: rgb(0, 255, 136);
-    padding: 10px;
+    padding: 10px
 }
 
 .column2 {
     float: right;
     width: 20%;
-    padding: 10px 10px;
+    padding: 10px
 }
 
 .row2 {
-
-
 }
 
 .row2:after {
     content: "";
     display: table;
-    clear: both;
+    clear: both
 }
 
 .column {
     float: left;
     width: 20%;
-    padding: 10px 10px;
+    padding: 10px
 }
 
 .row {
-
-
 }
 
 .row:after {
     content: "";
     display: table;
-    clear: both;
+    clear: both
 }
 
-/* Responsive columns */
 @media screen and (max-width: 800px) {
     .column {
         width: 100%;
         display: block;
-        margin-bottom: 20px;
+        margin-bottom: 20px
     }
 
-    .logo > img:nth-child(2),.logo > img:nth-child(3),.logo > img:nth-child(4) {
-        display: none;
+    .logo > img:nth-child(2), .logo > img:nth-child(3), .logo > img:nth-child(4) {
+        display: none
     }
 }
-
 
 .card {
     background-color: rgb(34, 34, 34);
@@ -85,25 +78,146 @@ footer {
     width: 100%;
     transition: 0.4s;
     min-height: 180px;
-    cursor: pointer;
+    cursor: pointer
 }
 
 .card:hover {
     background-color: rgb(0, 119, 255);
-    transition: 0.4s;
+    transition: 0.4s
 }
 
 .container {
-    padding: 8px 8px;
-    text-align: center;
+    padding: 8px;
+    text-align: center
 }
 
 .clearfix {
-    overflow: auto;
+    overflow: auto
 }
 
 .clearfix::after {
     content: "";
     clear: both;
-    display: table;
+    display: table
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4)
+}
+
+.modal-content {
+    position: relative;
+    background-color: #2b2b2b;
+    margin: auto;
+    padding: 0;
+    width: 100%;
+    max-width: 700px;
+    min-width: 400px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+@-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    position: relative;
+    top: -2px;
+}
+
+.close:focus, .close:hover {
+    color: #bdbdbd;
+    text-decoration: none;
+    cursor: pointer
+}
+
+.modal-header {
+    padding: 6px 16px;
+    background-color: #1a1a1a;
+    color: white
+}
+
+.modal-body {
+    padding: 2px 16px
+}
+
+.modal-body img {
+    max-height: 300px;
+}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #1a1a1a;
+    color: white;
+    height: 48px
+}
+
+.btn-download, .btn-share {
+    outline: 0;
+    padding: 8px 18px;
+    border-radius: 4px;
+    margin: 5px;
+    font-weight: bold;
+    font-size: 16px;
+    float: right;
+    cursor: pointer;
+    transition: 0.4s
+}
+
+.btn-download {
+    background: #00beff;
+    border: 0;
+    color: #1a1a1a
+}
+
+.btn-share {
+    background: transparent;
+    border: 1px solid #00beff;
+    color: #00beff
+}
+
+.btn-download:hover {
+    background: #39ccff;
+}
+
+.btn-share:hover {
+    background: #00beff2e;
 }
