Added description to modal

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ footer {
     animation-name: animatetop;
     animation-duration: 0.4s;
     border-radius: 5px;
-    overflow: hidden;
+    overflow: hidden
 }
 
 @-webkit-keyframes animatetop {
@@ -160,7 +160,7 @@ footer {
     font-size: 28px;
     font-weight: bold;
     position: relative;
-    top: -2px;
+    top: -2px
 }
 
 .close:focus, .close:hover {
@@ -181,6 +181,32 @@ footer {
 
 .modal-body img {
     max-height: 300px;
+    display: inline-block;
+    vertical-align: top
+}
+
+.modal-half {
+    display: inline-block;
+    height: 300px;
+    width: calc(100% - 305px);
+    vertical-align: bottom;
+    padding: 25px 10px
+}
+
+.modal-half .description {
+    min-height: calc(100% - 150px)
+}
+
+.modal-half .info {
+    height: 150px
+}
+
+.modal-half .info p {
+    line-height: 30px
+}
+
+.modal-half .info p span {
+    float: right
 }
 
 .modal-footer {
@@ -215,9 +241,9 @@ footer {
 }
 
 .btn-download:hover {
-    background: #39ccff;
+    background: #39ccff
 }
 
 .btn-share:hover {
-    background: #00beff2e;
+    background: #00beff2e
 }
