--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ footer span {
 .btn-download {
     background: #00beff;
     border: 0;
-    color: white;
+    color: #1a1a1a;
     border: 1px solid #00beff;
 }
 
