--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,16 @@ header {
 footer {
     background-color: rgb(0, 119, 255);
     padding: 100px;
-    text-align: center
+    text-align: center;
+}
+
+footer a {
+    text-decoration: none;
 }
 
 footer span {
     opacity: .7;
-    margin: 0 10px;
+    margin: 0 10px
 }
 
 .section1 {
